--- a/.github/workflows/ms.insights.privatelinkscopes.yml
+++ b/.github/workflows/ms.insights.privatelinkscopes.yml
@@ -31,6 +31,7 @@ env:
   AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
   ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
   ARM_MGMTGROUP_ID: ${{ secrets.ARM_MGMTGROUP_ID }}
+  resourceGroupName: 'joreynesrg'
 
 jobs:
   ############################
